Deny Access Page Setting modifications
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -68,6 +68,8 @@ menu:
             base: Plugin Management
         institute:
             manage: Institute
+        page:
+            roles: Page Roles
     family:
         manage: Manage Family       
     people:
