--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -86,6 +86,7 @@ person:
         manage: Personal Details
         category: Category
         edit: Edit Person
+        import: Import People
     edit: 
         title: Edit Person
         description: ''
