Deny Access Page Controller implementation
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -10,7 +10,7 @@ person:
             description: ''
         type:
             label: Type of Staff
-        toggle: Staff Menber Status
+        toggle: Staff Member Status
     actions: Actions
     return: Manage People
     dob:
