People Import Locality import is producing duplicates...
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -49,6 +49,9 @@ form:
     start_search: ""
     next: ""
     prev: ""
+    button:
+        save: ''
+        return: ''
 menu:
     site:
         manage: Configuration
