Pagination next button bug fix. Pagination change to record display, not page display statistics
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -8,7 +8,7 @@ pagination:
     sort: ''
     limit: ''
     startSearch: ''
-    figures: 'Page %current% of %pages%. Total Records: %total%'  
+    figures: 'Records %first% to %last% of %total%. %pages% Pages'
     next: ''
     prev: ''
 Family Name: Family Name
