Pagination Management, translation and Display changes. Debug Person Image being deleted.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -8,7 +8,7 @@ pagination:
     sort: ''
     limit: ''
     startSearch: ''
-    figures: 'Records %first% to %last% of %total%. %pages% Pages'
+    figures: "{0,1}Records %first% to %last% of %total%.|]1,Inf]Records %first% to %last% of %total%. %pages% Pages"
     next: ''
     prev: ''
 Family Name: Family Name
