Restore Institute Bundle
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -75,6 +75,8 @@ year:
         title: Edit Year
     calendar:
         button: Generate Calendar
+    current:
+        missing: No current calendar is available.
 calendar:
     title: Define Calendars
     description: Create and modify calendar definitions.
