--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -31,3 +31,5 @@ specialDay:
 caregiver:
     blank:
         family: The family for a caregiver must not be blank.
+    unique:
+        fail: The caregiver must be unique within a family.
