--- a/src/Busybee/FamilyBundle/Resources/translations/BusybeeFamilyBundle.en_GB.yml
+++ b/src/Busybee/FamilyBundle/Resources/translations/BusybeeFamilyBundle.en_GB.yml
@@ -20,7 +20,7 @@ family:
         students: Children (Students)
     help:
         name: The family name, if left blank, will be a combination of the caregivers names.  The family name must be unique.
-        caregiver: Select care givers for the family.  All people in the database not listed as students can be selected.
+        caregiver: Select care givers for the family.  All people in the database not listed as students can be selected. The order of contact is defined by the position in this list, the first appearing at the top of this list.
         students: Select existing students (children) to add to the family.  Changes are only saved when the family is saved.  Duplicates will be ignored.  Children can be members of multiple families.
     placeholder:
         caregiver: Select a care giver.
@@ -40,5 +40,9 @@ students:
 caregiver:
     label:
         person: Care Giver
+        emailcontact: Contact by EMail
+        smscontact: Contact by SMS
+        mailcontact: Contact by Mail
+        phonecontact: Contact by Phone
     placeholder:
         person: Select Care Giver
