--- a/src/Busybee/StaffBundle/Resources/translations/BusybeeStaffBundle.en_GB.yml
+++ b/src/Busybee/StaffBundle/Resources/translations/BusybeeStaffBundle.en_GB.yml
@@ -10,3 +10,6 @@ staff:
         jobTitle: Position Title
     placeholder:
         stafftype: Select Staff Position Category
+person:
+    tab:
+        staff: Staff
