Panel Design Implemented Save and Cancel Buttons added Security Reset mods
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -140,3 +140,6 @@ actions: Actions
 required: (Required)
 google:
     oauth: Google Authentication
+panel:
+    header:
+        empty: 'No Panel Title Defined: %name%'
