--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -77,6 +77,12 @@ year:
         button: Generate Calendar
     current:
         missing: No current calendar is available.
+    term:
+        add: Add Term
+        remove: Erase Term
+    specialday:
+        add: Add Special Day
+        remove: Erase Special Day
 calendar:
     title: Define Calendars
     description: Create and modify calendar definitions.
@@ -120,9 +126,9 @@ calendar:
         lastDay: Last Day
         action: Actions
     term:
-        title: "Manage Terms in %year%"
+        title: "Manage Terms in %name%"
     specialDay:
-        title: "Manage Special Days in %year%"
+        title: "Manage Special Days in %name%"
         add: Add Special Day
 term:
     add: Add Term
@@ -134,7 +140,7 @@ term:
         nameShort: Term Short Name
     delete:
         confirm: Are you sure you want to delete this Term?
-        title: Delete Term
+        title: Erase Term
 specialDay:
     help:
         day: (Must be Unique)
@@ -160,7 +166,7 @@ specialDay:
     hour: Hour
     minute: Minute
     delete:
-        title: Delete Special Day.
+        title: Erase Special Day.
         confirm: Are you sure you want to delete this Special Day?
     add:
         title: Add Special Day
