--- a/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -66,7 +66,9 @@ user:
         username: 'User Name'
         email: 'Email Address'
         actions: Actions 
-        enabled: Enabled 
+        enabled: Enabled
+    request:
+        passwordReset: Send a Password Reset Email
 security:
     login:
         password: Password
