--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -47,7 +47,7 @@ person:
         identifier: 'Id: %identifier%'
         age: 'Age: %years%.%months%.%days%'
         dob:
-            format: DoB Format
+            format: DoB Format in Source
     help:
         officialName: This is the name recorded on official documents. e.g. birth certificates and passports.
         photo: Passport style photo, 350px to 400px width by 450px to 500 px height. 
@@ -63,6 +63,7 @@ person:
             question: ''
         user:
             question: Provide access to this system.
+        email: An email is required for this person to become a user.
     tab:
         person: Person
         contact: Contact
