--- a/src/Busybee/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
+++ b/src/Busybee/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
@@ -31,14 +31,14 @@ system:
             description: Change the value and description of settings.
             success: The setting was saved successfully.
         label:
-            name: Setting Name
             description: Setting Description
             value: Setting Value
             displayName: Setting Display Name 
             upload: Upload Setting File
             default: Set as Default Upgrade
+        placeholder:
+            name: Select setting to edit.
         help:
-            name: Setting names are set by the program and are not available to change.  Select the name here to edit that setting.
             description: You can alter the setting decription to better describe the setting.
             boolean: Setting is true or false, Yes or No.
             array: "Setting values for arrays are displayed as a display name: key combination."
