Modified Setting Choice Idle Time Out implemented.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -22,7 +22,7 @@ person:
         title: "Contact Details: %name%"
     label:
         surname: Family Name
-        firstName: Given Name
+        firstName: Given Names
         preferredName: Preferred Name
         officialName: Official Name
         email: Email
