--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -142,8 +142,8 @@ panel:
     header:
         empty: 'No Panel Title Defined: %name%'
 idletimeout:
-    title: Timed Sign Out
-    signout: Sign Out Now
-    stay: Stay Connected
-    dialogue: No activitiy has been detected for %time% minutes.  You are about to be signed out of the system for security reasons.
+    title: 'Timed Sign Out'
+    signout: 'Sign Out Now'
+    stay: 'Stay Connected'
+    dialogue: 'No activity has been detected for %time% minutes.  You are about to be signed out of the system for security reasons.'
     timeRemaining: 'Time Remaining'
